# slider2

./: .gitignore  CMakeLists.txt
ImageConfig/: e2v.json  eva.json  gendex.json  kodak.json  planmeca.json  scanx.json  schick.json  suni.json
ImageProcessor/: BatchOperation.cpp  BatchOperation.h  BilateralFilter.cpp  BilateralFilter.h  Const.cpp  Const.h  Contrast.cpp  Contrast.h  Convert.cpp  Convert.h  CorrectGamma.cpp  CorrectGamma.h  DFT.cpp  DFT.h  Erode.cpp  Erode.h  GaussianBlur.cpp  GaussianBlur.h  ImageConfig.cpp  ImageConfig.h  ImageProcessor.cpp  ImageProcessor.h  Operation.h  Sharpen.cpp  Sharpen.h  Threshold.cpp  Threshold.h
src/: ConfigControl.cpp  ConfigControl.h  ControlPanel.cpp  ControlPanel.h  OperationControl.cpp  OperationControl.h  OperationList.cpp  OperationList.h  SliderControl.cpp  SliderControl.h  imageviewer.cpp  imageviewer.h  main.cpp  util.cpp  util.h
